[cli] Enable -XX:+UseCompactObjectHeaders (JRE 25) to improve memory footprint