@@ -73,11 +73,13 @@ private fun argFileContents(): String = commonDefaultJvmArgs().joinToString("\n"
 
 private fun commonDefaultJvmArgs(): List<String> = listOf(
     "-ea",
+    // Necessary for ByteBuddy loading the coroutines agent
     "-XX:+EnableDynamicAgentLoading",
-    // We need --enable-native-access=ALL-UNNAMED in JRE 24+ because of some JNA usages
+    // Smaller memory footprint because each object takes less space, less GC, more memory locality
+    "-XX:+UseCompactObjectHeaders",
+    // Needed in JRE 24+ because of some JNA usages
     "--enable-native-access=ALL-UNNAMED",
-    // We need --sun-misc-unsafe-memory-access=allow in JRE 24+ because of OpenTelemetry
-    // See https://github.com/open-telemetry/opentelemetry-java/issues/7219
+    // Needed in JRE 24+ because of OpenTelemetry (see https://github.com/open-telemetry/opentelemetry-java/issues/7219)
     "--sun-misc-unsafe-memory-access=allow",
 )
 
